# ws-rebalancer

./: .travis.yml  CONTRIBUTING.md  LICENSE  README.md  codecov.yml  pyproject.toml  tox.ini
.github/workflows/: build.yml
portfolio_rebalancer/: cli.py  portfolio.py  portfolio_asset.py  portfolio_csv_reader.py  rebalancer.py
tests/: conftest.py  helpers.py  test_portfolio_rebalancer.py
ws_rebalancer/: cli.py  portfolio.py  position.py  rebalancer.py  security.py  target_allocations_csv_reader.py  wealthsimple_login.py  wealthsimple_portfolio_reader.py
