[tool.poetry]
name = "ws-rebalancer"
version = "2.0.0"
description = "A CLI tool that helps you rebalance your WealthSimple portfolios."
license = "MIT"
readme = "README.md"
maintainers = ["Emil Maric <emil.maric@hotmail.com>"]
authors = ["Emil Maric <emil.maric@hotmail.com>"]
homepage = "https://github.com/EmilMaric/ws-rebalancer"
repository = "https://github.com/EmilMaric/ws-rebalancer"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Topic :: Office/Business :: Financial :: Accounting",
]
keywords = [
    'wealthsimple',
    'portfolio',
    'rebalancer',
    'stocks'
]

[tool.poetry.dependencies]
python = "^3.10"
click = "^7.1.2"
wealthsimple-trade-python = "^1.1.0"

[tool.poetry.scripts]
ws-rebalancer = "ws_rebalancer.cli:ws_rebalancer"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-cov = "^6.1.1"
pytest-mock = "^3.14.1"
flake8 = "^6.1.0"
tox = "4.26.0"
flake8-pyproject = "^1.2.3"

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 79
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    "*.egg-info",
    ".tox",
    ".pytest_cache"
]
